--- a/customer_segments/customer_segments.ipynb
+++ b/customer_segments/customer_segments.ipynb
@@ -975,7 +975,7 @@
     "          These features best represent PC2.\n",
     "          \n",
     "      3.3 The third Principal compenent (PC3):\n",
-    "          The third Component highly correlate with \"Milk\", \"Frozen\" and \"Deli\" and less correlate with \"Fresh\", \"Grocery\",      \n",
+    "          The third Component highly correlate with \"Milk\", \"Frozen\", \"Deli\", \"Fresh\" and less correlate with , \"Grocery\",      \n",
     "          \"Detergents_Paper\".\n",
     "          These features best represent PC3.\n",
     "      \n",
